--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,9 @@
 body {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 11px;
+    font-weight: 700;
+    line-height: 150%;
+    letter-spacing: 0rem;
     color: white;
     text-align: center;
     background-color: #141414;
@@ -8,4 +12,19 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100svh;
+}
+
+.card-wrapper {
+    background-color: #1F1F1F;
+    width: 24rem;
+    border-radius: 2rem;
+    padding: 2.5rem;
+}
+
+.profile-pic-image-wrapper {
+    border-radius: 50%;
+}
+
+span {
+    color: #C4F82A;
 }
