--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,6 @@
 body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 11px;
-    font-weight: 700;
     line-height: 150%;
     letter-spacing: 0rem;
     color: white;
@@ -22,9 +21,40 @@ body {
 }
 
 .profile-pic-image-wrapper {
-    border-radius: 50%;
+    border-radius: 100%;
 }
 
 span {
     color: #C4F82A;
+    font-weight: 700;
+}
+
+.bio-wrapper {
+    margin-top: 1.5rem;
+}
+
+.links-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 1.5rem;
+}
+
+.primary-button {
+    margin-top: 1rem;
+    background-color: #333333;
+    border: none;
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+    color: white;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: bold;
+    border-radius: .5rem;
+    box-shadow: none;
+    transition: ease-in-out 0.5s;
+}
+
+.primary-button:hover {
+    background-color:#C4F82A;
+    color: #141414;
 }
